[gd_scene load_steps=12 format=4 uid="uid://bv8ptdqytfx0l"]

[ext_resource type="Script" uid="uid://dh27fl4jf2g6a" path="res://Scripts/door2.gd" id="1_toj1x"]
[ext_resource type="VideoStream" uid="uid://mfnwklob24h4" path="res://Assets/Original Assets/Flashbacks 2D/Flashback 2 - No Sound.ogv" id="3_o0iou"]

[sub_resource type="BoxShape3D" id="BoxShape3D_38ogf"]
size = Vector3(1.13559, 2.76852, 0.843506)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vmd03"]
resource_name = "textures"
vertex_color_use_as_albedo = true
albedo_color = Color(0.906332, 0.906332, 0.906332, 1)
emission_enabled = true

[sub_resource type="ArrayMesh" id="ArrayMesh_hqn4t"]
_surfaces = [{
"aabb": AABB(0, -1.05, 0, 1, 2.15, 0.0999999),
"format": 34359742465,
"index_count": 36,
"index_data": PackedByteArray("AAABAAIAAwABAAAAAQAEAAIABQADAAAABQAAAAIAAwAGAAEABgADAAUABgAEAAEABwAFAAIABwAGAAUABwACAAQABgAHAAQA"),
"name": "textures",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 8,
"vertex_data": PackedByteArray("AACAP87MjD8AAAAAAACAP87MjD/GzMw9AAAAAM7MjD8AAAAAAACAP2Zmhr/GzMw9AAAAAM7MjD/GzMw9AACAP2Zmhr8AAAAAAAAAAGZmhr/GzMw9AAAAAGZmhr8AAAAA")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_2myhf"]
resource_name = "door_01_002"
_surfaces = [{
"aabb": AABB(0, -1.05, 0, 1, 2.15, 0.0999999),
"attribute_data": PackedByteArray("AABnPwAAOD4AAG4/AAA4PgAAZz8AAKg+AABuPwAAqD4AAAA/AABAPwAAID8AAEA/AAAAPwAAAD8AACA/AAAAPwAAXj8AAMA8AABmPwAAwDwAAF4/AAA4PgAAZj8AADg+AABfPwAApj4AAFg/AACmPgAAXz8AADQ+AABYPwAAND4AAGY/AADAPAAAbj8AAMA8AABmPwAAOD4AAG4/AAA4PgAAID8AAEA/AAAAPwAAQD8AACA/AAAAPwAAAD8AAAA/"),
"format": 34359742487,
"index_count": 36,
"index_data": PackedByteArray("AAABAAIAAQADAAIABAAFAAYABQAHAAYACAAJAAoACQALAAoADAANAA4ADQAPAA4AEAARABIAEQATABIAFAAVABYAFQAXABYA"),
"material": SubResource("StandardMaterial3D_vmd03"),
"name": "textures",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray("AACAP87MjD8AAAAAAACAP87MjD/GzMw9AAAAAM7MjD8AAAAAAAAAAM7MjD/GzMw9AACAP2Zmhr/GzMw9AAAAAGZmhr/GzMw9AACAP87MjD/GzMw9AAAAAM7MjD/GzMw9AAAAAGZmhr/GzMw9AAAAAGZmhr8AAAAAAAAAAM7MjD/GzMw9AAAAAM7MjD8AAAAAAAAAAGZmhr8AAAAAAAAAAGZmhr/GzMw9AACAP2Zmhr8AAAAAAACAP2Zmhr/GzMw9AACAP2Zmhr8AAAAAAACAP2Zmhr/GzMw9AACAP87MjD8AAAAAAACAP87MjD/GzMw9AAAAAGZmhr8AAAAAAACAP2Zmhr8AAAAAAAAAAM7MjD8AAAAAAACAP87MjD8AAAAA/3////9//7//f////3//v/9/////f/+//3////9//7//f/9/AAD/P/9//38AAP8//3//fwAA/z//f/9/AAD/PwAA/3//////AAD/f/////8AAP9//////wAA/3///////38AAP//////fwAA//////9/AAD//////38AAP////////9//3//v////3//f/+/////f/9//7////9//3//v/////8AAP+//////wAA/7//////AAD/v/////8AAP+/")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_hqn4t")

[sub_resource type="Animation" id="Animation_mw28t"]
resource_name = "Door_Closed"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DoorProperG:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.67265, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StaticBody3D/DoorProper:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.71),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.67203, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_27480"]
resource_name = "Door_Open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DoorProperG:layers")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DoorProperG:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.566667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 1.67265, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("StaticBody3D/DoorProper:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.57),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 1.67203, 0)]
}

[sub_resource type="Animation" id="Animation_38ogf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DoorProperG:layers")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DoorProperG:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("StaticBody3D/DoorProper:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mw28t"]
_data = {
&"Door_Closed": SubResource("Animation_mw28t"),
&"Door_Open": SubResource("Animation_27480"),
&"RESET": SubResource("Animation_38ogf")
}

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_mw28t"]
data = PackedVector3Array(1, 1.1, 0, 1, 1.1, 0.1, 0, 1.1, 0, 1, 1.1, 0.1, 0, 1.1, 0.1, 0, 1.1, 0, 1, -1.05, 0.1, 0, -1.05, 0.1, 1, 1.1, 0.1, 0, -1.05, 0.1, 0, 1.1, 0.1, 1, 1.1, 0.1, 0, -1.05, 0.1, 0, -1.05, 0, 0, 1.1, 0.1, 0, -1.05, 0, 0, 1.1, 0, 0, 1.1, 0.1, 0, -1.05, 0, 0, -1.05, 0.1, 1, -1.05, 0, 0, -1.05, 0.1, 1, -1.05, 0.1, 1, -1.05, 0, 1, -1.05, 0, 1, -1.05, 0.1, 1, 1.1, 0, 1, -1.05, 0.1, 1, 1.1, 0.1, 1, 1.1, 0, 0, -1.05, 0, 1, -1.05, 0, 0, 1.1, 0, 1, -1.05, 0, 1, 1.1, 0, 0, 1.1, 0)

[node name="Door" type="Area3D" groups=["player"]]
script = ExtResource("1_toj1x")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00111437, 1.40699, 0.0782471)
shape = SubResource("BoxShape3D_38ogf")

[node name="DoorProperG" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 1.1, -0.1)
mesh = SubResource("ArrayMesh_2myhf")
skeleton = NodePath("")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_mw28t")
}

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="DoorProper" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 1.1, -0.1)
shape = SubResource("ConcavePolygonShape3D_mw28t")

[node name="cutscene2" type="VideoStreamPlayer" parent="."]
offset_right = 40.0
offset_bottom = 40.0
stream = ExtResource("3_o0iou")

[connection signal="body_shape_entered" from="." to="." method="_on_body_shape_entered"]
[connection signal="body_shape_exited" from="." to="." method="_on_body_shape_exited"]
